package atomspace;

option java_package = "org.opencog.atomspace";
option java_outer_classname = "AtomSpaceProtos";

message AtomRequest {
    enum AtomRequestKind {
        // get atom by handle UUID
        UUID = 0;
        // get node by atom_type and node_name
        NODE = 1;
        // get link by atom_type and handle_seq
        LINK = 2;
    }
    required AtomRequestKind kind = 1;
    optional fixed64 uuid = 2;
    optional string atom_type = 3;
    optional string node_name = 4;
    repeated fixed64 handle_seq = 5;
}

message AtomsRequest {
    repeated AtomRequest requests = 1;
}

message AtomResult {
    enum ResultKind {
        // not found
        NOT_FOUND = 0;
        // found a node
        NODE = 1;
        // found a link
        LINK = 2;
    }
    required ResultKind kind = 1;
    optional fixed64 uuid = 2;
    optional string atom_type = 3;
    optional string node_name = 4;
    repeated fixed64 handle_seq = 5;
}